Set `z-index` on child elements instead of wrapper element. Fixes #52, props @hchouhan

--- a/assets/scss/bar.scss
+++ b/assets/scss/bar.scss
@@ -138,9 +138,13 @@ $mobile_max: 580px;
 	left: 0; right: 0;
 	width: 100%;
 	margin: 0;
-	z-index: 999999;
 	background: transparent;
 	text-align: center;
+}
+
+.mctb-bar,
+.mctb-close {
+	z-index: 999999;
 }
 
 .mctb-bar {
